# rag_project

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: experimentation.ipynb
src/: embeddings.py  llm_service.py  loader.py  main.py  rag_pipeline.py  splitter.py  vectorstore.py
src/vectorDB/a1494cfb-a911-4385-8cb4-edb955d87c8c/: index_metadata.pickle
ui/: index.html  style.css
vectorDB/: chroma.sqlite3
